--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>StoryMap Cinematic Pro</title>
+<title>Эко-точки Нефтеюганского района</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
@@ -496,3 +496,4 @@ document.getElementById("modePlay").onclick=togglePlay;
 </body>
 
 </html>
+
